<resources>
    <string name="app_name">EcoRecicla</string>

    <!-- CreateAccountActivity -->
    <string name="radio_button_terms">Acepto términos y condiciones</string>

    <!-- CategoriesActivity -->
    <string name="bar_title_category">CATEGORÍAS</string>
    <string name="title_category">Por favor seleccione la categoría que desea registrar:</string>
    <string name="plastic_category">Envases, tapitas, papel plástico, moldes plásticos, botellas, bolsas, etc</string>
    <string name="paper_category">Hojas, revistas, documentos, guías, diarios, sobres, folletos, etc</string>
    <string name="metal_category">Latas de bebida, conservas, herramientas, utencilios de cocina, bisutería, etc</string>
    <string name="computer_waste_category">Computadores, teclados, mouse, cámaras, discos duros, USBs, electrodomésticos</string>
    <string name="button_text_register">Registrar</string>
    <string name="bar_title_advices">CONSEJOS</string>
    <string name="content_description_media">La descripcion del contenido multimedia</string>
    <string name="TitleAdvices">Categoria consejo</string>

    <!-- RecyclingRegistrationFormActivity -->
    <string name="bar_title_register">REGISTRO</string>
    <string name="title_category_recyclingregistration">Por favor ingrese los datos  de reciclaje:</string>
    <string name="button_text_delete_register">Borrar</string>

    <!-- StatisticsActivity -->
    <string name="bar_title_statistics">ESTADÍSTICAS</string>

    <!-- ProfileActivity -->
    <string name="bar_title_profile">MI PERFIL</string>
    <string name="title_profile">Mi perfil</string>
    <string name="subtitle_profile">Actualiza tus datos personales</string>
    <string name="label_first_name">Nombre</string>
    <string name="label_last_name">Apellido</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_cell_phone">Teléfono celular</string>
    <string name="label_city">Ciudad</string>



</resources>