<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecyclingRegistrationFormActivity">

    <!-- Barra de la aplicación -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Barra superior -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_mainmenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/darkGreen"
            app:layout_scrollFlags="scroll|enterAlways">

            <!-- Botón de menú en la barra -->

            <ImageButton
                android:id="@+id/btnBackRecyclingRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_menu_back" />

            <!-- Título de la barra -->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="230dp"
                android:text="@string/bar_title_register"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/viewLogoRecyclingRegistration"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ecoreciclalogo" />

        <TextView
            android:id="@+id/txtTitleRecyclingRegistration"
            android:layout_width="330dp"
            android:layout_height="52dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/title_category_recyclingregistration"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLogoRecyclingRegistration" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleRecyclingRegistration">

            <TextView
                android:id="@+id/txtAmountRecyclingRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cantidad reciclada"
                android:textColor="#285827"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtShowAmountRecyclingRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/txtPriceRecyclingRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Precio"
                android:textColor="#285827"
                android:textSize="16sp"
                android:textStyle="bold"
                android:inputType="number"/>

            <EditText
                android:id="@+id/txtShowPriceRecyclingRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:hint="$"
                android:inputType="number" />

            <TextView
                android:id="@+id/txtMonthRecyclingRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Mes"
                android:textColor="#285827"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnMonthsRecyclingRegistration"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEcoReciclaPointsRecyclingRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="EcoReciclaPuntos acomulados"
                    android:textColor="#285827"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtShowPointsRecyclingRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="4"
                    android:inputType="number"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegisterRecyclingRegistration"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#285827"
            android:text="@string/button_text_register"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnDeleteRecyclingRegistration"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#285827"
            android:textSize="18sp"
            android:text="@string/button_text_delete_register"
            app:layout_constraintBottom_toTopOf="@+id/btnRegisterRecyclingRegistration"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>