<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvicesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Barra superior -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_mainmenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#01BD46"
            app:layout_scrollFlags="scroll|enterAlways">

            <!-- Botón de menú en la barra -->

            <ImageButton
                android:id="@+id/backAdvices_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_menu_back" />

            <!-- Título de la barra -->

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#01BE46"
                    android:text="@string/bar_title_advices"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="32dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:contentDescription="@string/content_description_media"
                    android:scaleType="centerInside"
                    android:src="@drawable/ecoreciclalogo"
                    android:layout_margin="10dp"/>

                <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtTitleAdvices"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/TitleAdvices"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:scaleType="fitEnd"
                            android:src="@drawable/imgtips" />
                    </LinearLayout>

                    <TextView

                        android:id="@+id/txtSubtitleAdvice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Subtitulo"
                        android:textSize="16sp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"/>

                    <TextView

                        android:id="@+id/txtAdvices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="fill_horizontal"
                        android:text="Aqui van los consejos"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />


                </LinearLayout>

                <ImageButton
                    android:id="@+id/btn_next"
                    android:layout_width="46dp"
                    android:layout_height="42dp"
                    android:layout_gravity="end"
                    android:background="@android:drawable/ic_media_next"
                    android:backgroundTint="#01BE46" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#01BF46" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>